feat: add background image and update homepage layout for DishQuest

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DishQuest - Recipe Finder</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DishQuest - Home</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="landing-page">
-    <section class="hero">
-        <div class="overlay">
-            <h1>Discover the Art of Cooking,<br> One Recipe at a Time</h1>
-            <a href="main.html" class="btn">Get Started</a>
-        </div>
-    </section>
+  <div class="hero">
+    <div class="overlay">
+      <!-- Logo -->
+      <h1 class="logo">DishQuest</h1>
+
+      <!-- Main Heading -->
+      <h2>Discover Delicious Recipes</h2>
+
+      <!-- Button -->
+      <a href="main.html" class="btn">Get Started</a>
+    </div>
+  </div>
 </body>
 </html>
