In index.html i create homepage with search bar, category buttons, and trending recipes section and in main.html i add a recipe listing page to display search and category results

--- a/main.html
+++ b/main.html
@@ -17,6 +17,13 @@
         <button id="searchBtn">Search</button>
     </section>
 
+    <!-- Category Buttons -->
+    <section class="category-section">
+        <button class="categoryBtn" data-category="African">African Delights</button>
+        <button class="categoryBtn" data-category="Italian">Italian Classics</button>
+        <button class="categoryBtn" data-category="British">English Comforts</button>
+    </section>
+
     <section id="recipeList" class="recipes-container">
         <!-- Recipes will be injected here -->
     </section>
