--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
         <button id="searchBtn">Search</button>
     </section>
 
-    <!-- Category Buttons -->
+    <!-- Cuisine Buttons (use 'area' not 'category') -->
     <section class="category-section">
-        <button class="categoryBtn" data-category="African">African Delights</button>
-        <button class="categoryBtn" data-category="Italian">Italian Classics</button>
-        <button class="categoryBtn" data-category="British">English Comforts</button>
+        <button class="categoryBtn" data-area="Spanish">Spanish Foods</button>
+        <button class="categoryBtn" data-area="Italian">Italian Classics</button>
+        <button class="categoryBtn" data-area="British">English Comforts</button>
     </section>
 
     <section id="recipeList" class="recipes-container">
