--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
       <a href="main.html" class="btn">Get Started</a>
     </div>
   </div>
+  <footer class="footer">
+  <p>&copy; 2025 Rachel MacMathew</p>
+</footer>
 </body>
 </html>
