--- a/main.html
+++ b/main.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DishQuest - Search Recipes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
-        <h2>Hello, Emily</h2>
-        <p>Welcome to DishQuest recipes</p>
+        <!-- Back Button -->
+        <a id="back-btn">
+            &#8592; <span>Back</span>
+                </a>
+        <div>
+            <h2>Hello, Emily</h2>
+            <p>Welcome to DishQuest recipes</p>
+        </div>
+
     </header>
 
     <section class="search-section">
@@ -30,4 +39,5 @@
 
     <script src="js/app.js"></script>
 </body>
+
 </html>
